@@ -1,8 +1,9 @@
 #!/usr/bin/env bash
 set -euo pipefail
 cd "$(dirname "$0")/../.."
+export GRADLE_OPTS="--enable-native-access=ALL-UNNAMED"
 if [ $# -gt 0 ]; then
-    ./gradlew run --args="$*"
+    ./gradlew -q run --args="$*"
 else
-    ./gradlew run
+    ./gradlew -q run
 fi
